base/016-rule-transformation/fuse-016-rule-transformation-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rule-transformation
  name: rule-transformation
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rule-transformation
---
