base/016-rule-transformation/fuse-016-rule-transformation-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: rule-transformation
  name: rule-transformation
spec:
  host: "rule-transformation-development.apps.ocp.virt.prospecta.com.au"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rule-transformation
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
